# rust_rocket_template

./: Cargo.toml  README.md  Rocket.toml  env_example
.github/workflows/: static.yml
src/: lib.rs  main.rs
src/catchers/: mod.rs
src/errors/: our_error.rs
src/fairings/: cors.rs  csrf.rs  mod.rs
src/routes/: mod.rs
src/user/: mod.rs
src/views/: template.html.tera
src/views/index/: main.html.tera
src/views/user/: login.html.tera
static/: index.html
static/css/: main.css
static/js/: main.js
