[package]
name = "rocket_eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rocket_eval"
path = "src/main.rs"

[lib]
name = "rocket_eval"
path = "src/lib.rs"

[dependencies]
argon2 = {version="0.5.2", features = ["std"]}
async-log = "2.0.0"
base64 = "0.21.5"
chrono = {version="0.4.31",features = ["serde"]}
fern = "0.6.2"
log = "0.4.20"
rocket = {version="0.5.0", features = ["uuid", "secrets"]}
rocket_dyn_templates = {version="0.1.0",features = ["tera"]}
serde = "1.0.194"
time = {version="0.3.31", features = ["std"]}
zxcvbn = "2.2.2"
